--- a/repos.yaml
+++ b/repos.yaml
@@ -5,3 +5,4 @@ repos:
   - rizonesoft/Notepad3 # 文本编辑工具
   - obsproject/obs-studio # 录屏、直播工具
   - pbatard/rufus # 可启动 U 盘镜像写入工具
+  - VSCodium/vscodium # VSCode 软件并非完全开源，此为开源替代品
