--- a/repos.yaml
+++ b/repos.yaml
@@ -8,4 +8,5 @@ repos:
   - VSCodium/vscodium # VSCode 的一个“自由”许可证的发行版
   - git-for-windows/git # Windows 端的 git 命令行
   - dbeaver/dbeaver # 数据库前端工具
+  - agalwood/Motrix # 下载工具
   
