Update description of YerongAI/Office-Tool

--- a/repos.yaml
+++ b/repos.yaml
@@ -1,7 +1,7 @@
 repos:
   - texstudio-org/texstudio # LaTeX 的前端书写工具
   - ventoy/Ventoy # 多系统启动 U 盘解决方案
-  - YerongAI/Office-Tool # 可帮助校园、企业客户批量部署 MS Office 的工具
+  - YerongAI/Office-Tool # 可帮助校园、企业客户批量部署 MS Office 的工具，非开源
   - rizonesoft/Notepad3 # 文本编辑工具
   - obsproject/obs-studio # 录屏、直播工具
   - pbatard/rufus # 可启动 U 盘镜像写入工具
