--- a/repos.yaml
+++ b/repos.yaml
@@ -10,4 +10,5 @@ repos:
   - dbeaver/dbeaver # 数据库前端工具
   - agalwood/Motrix # 基于 aria2 的下载工具
   - aria2/aria2 # 命令行多线程下载工具
-  
+  - rime/weasel # 中州韻輸入法引擎 - 小狼毫（Windows）
+  - rime/squirrel # 中州韻輸入法引擎 - 鼠鬚管（macOS）
