--- a/repos.yaml
+++ b/repos.yaml
@@ -19,5 +19,6 @@ repos:
   - PowerShell/PowerShell
   - marktext/marktext # Markdown 编辑器
   - Molunerfinn/PicGo # 图床上传工具
+  - caddyserver/caddy # HTTP 服务器
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
