--- a/repos.yaml
+++ b/repos.yaml
@@ -21,5 +21,6 @@ repos:
   - Molunerfinn/PicGo # 图床上传工具
   - caddyserver/caddy # HTTP 服务器
   - henrypp/memreduct # 针对 Windows 的内存清理工具
+  - raspberrypi/rpi-eeprom # 树莓派 4 的 bootloader 固件
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
