--- a/repos.yaml
+++ b/repos.yaml
@@ -23,5 +23,6 @@ repos:
   - henrypp/memreduct # 针对 Windows 的内存清理工具
   - raspberrypi/rpi-eeprom # 树莓派 4 的 bootloader 固件
   - DDoSolitary/LxRunOffline # 从自定义 rootfs 手动安装 WSL 的工具
+  - ethereum/solidity # 以太坊 Solidity 智能合约编译器
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
