--- a/repos.yaml
+++ b/repos.yaml
@@ -25,5 +25,6 @@ repos:
   - DDoSolitary/LxRunOffline # 从自定义 rootfs 手动安装 WSL 的工具
   - ethereum/solidity # 以太坊 Solidity 智能合约编译器
   - BluePointLilac/ContextMenuManager # Windows 右键菜单管理小工具
+  - BtbN/FFmpeg-Builds # 第三方 ffmpeg 构建
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
