--- a/repos.yaml
+++ b/repos.yaml
@@ -26,5 +26,7 @@ repos:
   - ethereum/solidity # 以太坊 Solidity 智能合约编译器
   - BluePointLilac/ContextMenuManager # Windows 右键菜单管理小工具
   - ShareX/ShareX # 截图工具
+  - rustdesk/rustdesk # 远程控制软件
+  # - musescore/MuseScore # 音乐制谱软件
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
