--- a/repos.yaml
+++ b/repos.yaml
@@ -29,5 +29,6 @@ repos:
   - ShareX/ShareX # 截图工具
   - rustdesk/rustdesk # 远程控制软件
   # - musescore/MuseScore # 音乐制谱软件
+  - jgraph/drawio-desktop # draw.io 绘图软件
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
