--- a/repos.yaml
+++ b/repos.yaml
@@ -32,5 +32,6 @@ repos:
   - jgraph/drawio-desktop # draw.io 绘图软件
   - svenstaro/miniserve # 快速部署的 HTTP 文件服务器
   - arduino/arduino-ide
+  - espressif/arduino-esp32 # ESP32 的 Arduino IDE 支持
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
