--- a/repos.yaml
+++ b/repos.yaml
@@ -28,11 +28,11 @@ repos:
   - BluePointLilac/ContextMenuManager # Windows 右键菜单管理小工具
   - ShareX/ShareX # 截图工具
   - rustdesk/rustdesk # 远程控制软件
-  # - musescore/MuseScore # 音乐制谱软件
+  - musescore/MuseScore # 音乐制谱软件
   - jgraph/drawio-desktop # draw.io 绘图软件
   - svenstaro/miniserve # 快速部署的 HTTP 文件服务器
   - arduino/arduino-ide
   - espressif/arduino-esp32 # ESP32 的 Arduino IDE 支持
-  # - FreeCAD/FreeCAD
+  - FreeCAD/FreeCAD
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
