--- a/repos.yaml
+++ b/repos.yaml
@@ -37,5 +37,6 @@ repos:
   - niXman/mingw-builds-binaries # 第三方 MinGW-w64 构建
   - CloverHackyColor/CloverBootloader # Clover
   - Chuyu-Team/Dism-Multi-language # Windows 综合优化工具，非开源
+  - snowie2000/mactype # Windows 字体渲染工具
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
