Add scrcpy, ScreenToGif and localsend

--- a/repos.yaml
+++ b/repos.yaml
@@ -39,5 +39,8 @@ repos:
   - Chuyu-Team/Dism-Multi-language # Windows 综合优化工具，非开源
   - snowie2000/mactype # Windows 字体渲染工具
   - paintdotnet/release # 图像处理工具，非开源
+  - Genymobile/scrcpy # 开源安卓手机投屏控制工具
+  - NickeManarin/ScreenToGif # 开源的 GIF 动图录制工具
+  - localsend/localsend # 跨平台的本地文件传输工具
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
