--- a/repos.yaml
+++ b/repos.yaml
@@ -42,5 +42,6 @@ repos:
   - Genymobile/scrcpy # 开源安卓手机投屏控制工具
   - NickeManarin/ScreenToGif # 开源的 GIF 动图录制工具
   - localsend/localsend # 跨平台的本地文件传输工具
+  - Blinue/Magpie # Windows 窗口缩放工具
   # 以下为山大相关仓库
   - SadPencil/sdunetd # 山大校园网登录守护程序，可部署在电脑和路由器
